--- a/c_Autók.css
+++ b/c_Autók.css
@@ -13,3 +13,13 @@ body{
 .Forrasok{
     font-size: small;
 }
+#cim{
+    font-size: xx-large;
+    font-weight: bold;
+    text-align: center;
+    background-color: white;
+}
+h1{
+    text-align: center;
+    height: 10vw;
+}
