--- a/c_Autók.css
+++ b/c_Autók.css
@@ -5,7 +5,9 @@ html {
     padding-right: 10%;
     background-attachment: fixed;
 }
-
+p{
+    text-align: justify;
+}
 body{
     background-color: rgba(255, 255, 255, 90%);
     font-size: large;
