--- a/bootstrap.css
+++ b/bootstrap.css
@@ -263,8 +263,9 @@ select {
 button,
 [type="button"],
 [type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
+[type="submit"] 
+{
+  -webkit-appearance: button ;
 }
 
 button:not(:disabled),
