--- a/c_Autók.css
+++ b/c_Autók.css
@@ -26,6 +26,7 @@ body{
 h1{
     text-align: center;
     height: 10vw;
+    text-shadow: 10 10 10;
 }
 #főcím{
     text-align: center;
@@ -33,11 +34,12 @@ h1{
 .Képek{
     float: right;
     padding: 30px;
+    background-color: rgba(255, 255, 255, 90%);
 }
 video{
    
-    height: 80%;
-    width: 80%;
-    float: left;
+    height:40%;
+    width: 40%;
+    text-align: justify;
 }
 
